tests/cases/smoke/invalid/control_unreachable_after_continue.ty
var i = 0
while i < 3 {
    i = i + 1
    continue
    print(i)
}
